Update TheJournalfor.html div alignment

--- a/TheJournalfor.html
+++ b/TheJournalfor.html
@@ -11,7 +11,7 @@
   <body>
   
     <canvas id="myCanvas"></canvas>
-	<div>
+	<div clas="center-div">
   <script type="text/javascript" src="http://s3.amazonaws.com/codecademy-content/courses/hour-of-code/js/bubbles.js">
     </script>
 	
